perf: added mailchimp connection

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Onyinye Gift Cards</title>
+  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/c82b42f6917e13a4c1bef7c50/4ab04b81db1239b2db84b342d.js");</script>
 </head>
 
 <body>
